content/docs/v1.3/configuration/registries/ecr/index.mdx
---
title: "ECR (Amazon Elastic Container Registry)"
description: "The ecr registry lets you configure ECR integration."
---

import { Callout } from 'fumadocs-ui/components/callout';
import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

![logo](/docs/assets/configuration/registries/ecr/ecr.png)

The `ecr` registry lets you configure [ECR](https://aws.amazon.com/ecr/) integration.

## Variables

| Env var | Required | Description | Supported values | Default value when missing |
| --- | :---: | --- | --- | --- |
| `DD_REGISTRY_ECR_{REGISTRY_NAME}_REGION` | 🔴 | A valid AWS Region Code | [AWS Region list](https://docs.aws.amazon.com/general/latest/gr/rande.html#regional-endpoints) | |
| `DD_REGISTRY_ECR_{REGISTRY_NAME}_ACCESSKEYID` | 🔴 | A valid AWS Access Key Id | [Standard AWS Credentials](https://docs.aws.amazon.com/general/latest/gr/aws-sec-cred-types.html) | |
| `DD_REGISTRY_ECR_{REGISTRY_NAME}_SECRETACCESSKEY` | 🔴 | A valid AWS Secret Access Key | [Standard AWS Credentials](https://docs.aws.amazon.com/general/latest/gr/aws-sec-cred-types.html) | |

<Callout type="warn">The AmazonEC2ContainerRegistryReadOnly Policy (or higher) must be attached to the AWS IAM User.</Callout>

## Examples

<Tabs items={["Docker Compose", "Docker"]}>
<Tab value="Docker Compose">

```yaml
services:
  drydock:
    image: codeswhat/drydock
    ...
    environment:
      - DD_REGISTRY_ECR_PRIVATE_ACCESSKEYID=xxx
      - DD_REGISTRY_ECR_PRIVATE_SECRETACCESSKEY=xxx
      - DD_REGISTRY_ECR_PRIVATE_REGION=eu-west-1 
```

</Tab>
<Tab value="Docker">
```bash
docker run \
  -e DD_REGISTRY_ECR_PRIVATE_ACCESSKEYID="xxx" \
  -e DD_REGISTRY_ECR_PRIVATE_SECRETACCESSKEY="xxx" \
  -e DD_REGISTRY_ECR_PRIVATE_REGION="eu-west-1" \
  ...
  codeswhat/drydock
```
</Tab>
</Tabs>

## How to create an AWS IAM user and get programmatic access

### 1. Login to your&nbsp;[Go to the IAM Service from your AWS Console](https://console.aws.amazon.com/iam) and create a new user

![image](/docs/assets/configuration/registries/ecr/ecr_01.png)

### 2. Attach the AmazonEC2ContainerRegistryReadOnly policy to the user

![image](/docs/assets/configuration/registries/ecr/ecr_02.png)

### 3. Get your AccessKeyId and your Secret Access Key and configure drydock with them

![image](/docs/assets/configuration/registries/ecr/ecr_03.png)
