content/docs/v1.5/configuration/registries/ecr/index.mdx
---
title: "ECR (Amazon Elastic Container Registry)"
description: "The ecr registry lets you configure ECR integration."
---

import { Callout } from 'fumadocs-ui/components/callout';
import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

![logo](/docs/assets/configuration/registries/ecr/ecr.png)

The `ecr` registry lets you configure [ECR](https://aws.amazon.com/ecr/) integration.

## Variables

| Env var | Required | Description | Supported values | Default value when missing |
| --- | :---: | --- | --- | --- |
| `DD_REGISTRY_ECR_{REGISTRY_NAME}_ACCESSKEYID` | ⚪ | A valid AWS Access Key Id (required for private images) | [Standard AWS Credentials](https://docs.aws.amazon.com/general/latest/gr/aws-sec-cred-types.html) | |
| `DD_REGISTRY_ECR_{REGISTRY_NAME}_SECRETACCESSKEY` | ⚪ | A valid AWS Secret Access Key (required for private images) | [Standard AWS Credentials](https://docs.aws.amazon.com/general/latest/gr/aws-sec-cred-types.html) | |
| `DD_REGISTRY_ECR_{REGISTRY_NAME}_REGION` | ⚪ | A valid AWS Region Code (required for private images) | [AWS Region list](https://docs.aws.amazon.com/general/latest/gr/rande.html#regional-endpoints) | |

<Callout type="warn">The AmazonEC2ContainerRegistryReadOnly Policy (or higher) must be attached to the AWS IAM User.</Callout>

<Callout type="info" title="Auth token caching">
ECR authorization tokens are valid for 12 hours. drydock caches the token per instance and refreshes it within 5 minutes of expiry, eliminating redundant `GetAuthorizationToken` calls on every container watch cycle. The cache write is race-safe: if credentials rotate between two concurrent token fetches, the stale result is discarded rather than overwriting the fresh token.
</Callout>

## Examples

<Tabs items={["Docker Compose", "Docker"]}>
<Tab value="Docker Compose">

```yaml
services:
  drydock:
    image: codeswhat/drydock:v1.5.2
    ...
    environment:
      - DD_REGISTRY_ECR_PRIVATE_ACCESSKEYID=xxx
      - DD_REGISTRY_ECR_PRIVATE_SECRETACCESSKEY=xxx
      - DD_REGISTRY_ECR_PRIVATE_REGION=eu-west-1 
```

</Tab>
<Tab value="Docker">
```bash
docker run \
  -e DD_REGISTRY_ECR_PRIVATE_ACCESSKEYID="xxx" \
  -e DD_REGISTRY_ECR_PRIVATE_SECRETACCESSKEY="xxx" \
  -e DD_REGISTRY_ECR_PRIVATE_REGION="eu-west-1" \
  ...
  codeswhat/drydock:v1.5.2
```
</Tab>
</Tabs>

## How to create an AWS IAM user and get programmatic access

### 1. [Go to the IAM Service from your AWS Console](https://console.aws.amazon.com/iam) and create a new user

![image](/docs/assets/configuration/registries/ecr/ecr_01.png)

### 2. Attach the AmazonEC2ContainerRegistryReadOnly policy to the user

![image](/docs/assets/configuration/registries/ecr/ecr_02.png)

### 3. Get your AccessKeyId and your Secret Access Key and configure drydock with them

![image](/docs/assets/configuration/registries/ecr/ecr_03.png)
